--- a/totalt.html
+++ b/totalt.html
@@ -10,17 +10,16 @@
         integrity="sha384-uWxY/CJNBR+1zjPWmfnSnVxwRheevXITnMqoEIeG1LJrdI0GlVs/9cVSyPYXdcSF" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
     <div class="container-fluid">
         <div class="row" style="height: 230px; margin: 0;">
             <div class="col-7 header-left">
                 <p>Garluö</p>
                 <p>Aktieopen</p>
-                <!-- Button trigger modal -->
                 <button type="button" class="mt-4" data-bs-toggle="modal" data-bs-target="#exampleModal">
                     Regler
                 </button>
-
                 <!-- Modal -->
                 <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel"
                     aria-hidden="true"">
@@ -46,8 +45,8 @@
             </div>
         </div>
         <div class="row btn-group">
-            <div class="col-6 btns btn1">2021</div>
-            <div class="col-6 btns btn2"><a href="totalt.html">Totalt</a></div>
+            <div class="col-6 btns btn2"><a href="index.html">2021</a></div>
+            <div class="col-6 btns btn1">Totalt</div>
         </div>
     </div>
 
@@ -61,7 +60,6 @@
             </div>
             <div class="winner2">
                 <p class="procent">+68%</p>
-                <p class="stock">Bäst aktie: Hexatronic Group</p>
             </div>
 
 
@@ -107,6 +105,7 @@
             <p class="procent">+8%</p>
         </div>
     </div>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-kQtW33rZJAHjgefvhyyzcGF3C5TFyBQBA13V1RKPf4uH+bwyzQxZ6CmMZHmNBEfJ"
         crossorigin="anonymous"></script>
